change name app

--- a/slides/WatchRisk/index.html
+++ b/slides/WatchRisk/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
 
   <title>Watch Risk</title>
-  <meta content="ZOO Project presentation at FOSS4G-FR 2016" name=
+  <meta content="Wath Risk Application" name=
   "description">
-  <meta content="Gérald FENOY" name="author">
+  <meta content="Teerayoot INJUN" name="author">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="black-translucent" name=
   "apple-mobile-web-app-status-bar-style">
