--- a/slides/WatchRisk/index.html
+++ b/slides/WatchRisk/index.html
@@ -52,7 +52,7 @@
 
           <div class="row">
         <ul class="auth">
-          <li><h1>  Watch Risk </h1>
+          <li> andriod application <h1>  Watch Risk </h1>
           </li>
           <li> Teerayoot INJUN</li>
           <li> Chingchai HUMHONG</li>
