--- a/slides/WatchRisk/index.html
+++ b/slides/WatchRisk/index.html
@@ -55,7 +55,7 @@
           <li> andriod application <h1>  Watch Risk </h1>
           </li>
           <li> Teerayoot INJUN</li>
-          <li> Chingchai HUMHONG</li>
+          <li> Chingchai HOOMHONG</li>
           <li> Sakda HOMHUAN</li>
           <li> Chada NARONGRIT <br><br></li>
           <li><canter><img src="http://www.cgistln.nu.ac.th/pararubber/resources/logo_gistv3.png" width="20%" alt=""></canter></li>
@@ -250,7 +250,7 @@
         </div>
         <div class="col-xs-4 col-sm-4 col-lg-3 text-center">
             <a ><img src= "img/team/2.jpg" width="100%"></a>
-          <small>Chingchai HUMHONG<br> DEVELOPER</small> 
+          <small>Chingchai HOOMHONG<br> DEVELOPER</small> 
         </div>
         <div class="col-xs-4 col-sm-4 col-lg-3 text-center">
           <a ><img src= "img/team/3.jpg" width="100%"></a>
