--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -36,9 +36,12 @@
 </head>
   
  <style>
+   body{
+     color: #464b54
+   }
   .f {
-      font-size: 40%;
-      color: white;
+      font-size: 30%;
+      color: #464b54;
   } 
 </style>
 
