--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -126,15 +126,13 @@
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
              
             <p class="page">
-              <div class="f">
                 1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก <br>  
                 2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น <br>
                 3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก  <br>
                 4)  กดยืนยันเมื่อทำการปลูกพืชตามที่ระบุไว้จริง <br>
                 5)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต <br>
                 6)  เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก <br>
-                7)  บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)
-            </div>
+                7)  บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)            
             </p>
 
           </div>
@@ -212,7 +210,7 @@
                    
                   <p class="page"><small>ระบบประมวลผลแผนที่บนเว็บ (สำหรับเจ้าหน้าที่ส่งเสริมการเกษตร เจ้าหน้าที่สินเชื่อ บริษัทขายปัจจัยการเกษตร) </small>
                   </p>
-                  <p class="page"><small>1) เรียกดูแผนที่ปฏิทินเพาะปลูกของเกษตรกรเพื่อประเมินช่วงเวลาที่มีความต้องการสินเชื่อและปัจจัยการผลิตเชิงพื้นที่ รวมทั้งปริมาณผลผลิตและสถานการณ์ความเสี่ยงภัยแล้งของพื้นที่เพาะปลูกในภาพรวม</small>
+                  <p class="page"><small>เรียกดูแผนที่ปฏิทินเพาะปลูกของเกษตรกรเพื่อประเมินช่วงเวลาที่มีความต้องการสินเชื่อและปัจจัยการผลิตเชิงพื้นที่ รวมทั้งปริมาณผลผลิตและสถานการณ์ความเสี่ยงภัยแล้งของพื้นที่เพาะปลูกในภาพรวม</small>
                   </p>
 
                 </div>
