--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -208,9 +208,8 @@
 
                 <div class="col-xs-12 col-sm-12 col-lg-12 text-left">
                    
-                  <p class="page"><small>ระบบประมวลผลแผนที่บนเว็บ (สำหรับเจ้าหน้าที่ส่งเสริมการเกษตร เจ้าหน้าที่สินเชื่อ บริษัทขายปัจจัยการเกษตร) </small>
-                  </p>
-                  <p class="page"><small>เรียกดูแผนที่ปฏิทินเพาะปลูกของเกษตรกรเพื่อประเมินช่วงเวลาที่มีความต้องการสินเชื่อและปัจจัยการผลิตเชิงพื้นที่ รวมทั้งปริมาณผลผลิตและสถานการณ์ความเสี่ยงภัยแล้งของพื้นที่เพาะปลูกในภาพรวม</small>
+                  <p class="page">ระบบประมวลผลแผนที่บนเว็บ (สำหรับเจ้าหน้าที่ส่งเสริมการเกษตร เจ้าหน้าที่สินเชื่อ บริษัทขายปัจจัยการเกษตร)</p>
+                  <p class="page">เรียกดูแผนที่ปฏิทินเพาะปลูกของเกษตรกรเพื่อประเมินช่วงเวลาที่มีความต้องการสินเชื่อและปัจจัยการผลิตเชิงพื้นที่ รวมทั้งปริมาณผลผลิตและสถานการณ์ความเสี่ยงภัยแล้งของพื้นที่เพาะปลูกในภาพรวม</small>
                   </p>
 
                 </div>
