--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -230,13 +230,12 @@
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
 
           <p class="page">
-            <small> <br>
-              ● ประเทศไทย  <br><br>
+             <br>
+             <h5> ● ประเทศไทย  </h5>
               ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้ <br><br>
               ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ <br><br>
               ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br><br>
-              ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br>
-            </small>
+              ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br>           
           </p>
         </div>
         
