--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -7,7 +7,7 @@
   <title>FarmPlan</title>
   <meta content="Farm Plan Project" name=
   "description">
-  <meta content="Gérald FENOY" name="author">
+  <meta content="gistnu" name="author">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="black-translucent" name=
   "apple-mobile-web-app-status-bar-style">
@@ -38,8 +38,11 @@
  <style>  
   .f {
       font-size: 1em;
-      color: #464b54;
   } 
+   
+   .ff {
+      font-size: 0.7em;
+  }
 </style>
 
 <body >
@@ -230,13 +233,13 @@
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
 
           <p class="page">
-             <br>
-             <h5> ● ประเทศไทย  </h5>
+             <div class="ff">
+              ● ประเทศไทย  <br><br>
               ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้ <br><br>
               ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ <br><br>
               ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br><br>
               ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br>           
-          </p>
+          </div>
         </div>
         
         <div class="col-xs-4 col-sm-4 col-lg-4 text-center ">
