--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -40,9 +40,12 @@
       font-size: 1em;
   } 
    
-   .ff {
-      font-size: 0.7em;
-  }
+.reveal p {
+	margin-bottom: 10px;
+	line-height: 1.2em;
+	font-size:.6em !important;
+	color:red;
+}
 </style>
 
 <body >
@@ -121,9 +124,9 @@
           <h2>ขั้นตอนการทำงาน (แอปพลิเคชัน)</h2>
        <br>
           <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-            <img src="img/app/1.png" alt="" width="33%">
-            <img src="img/app/2.png" alt="" width="33%">
-            <img src="img/app/23.png" alt="" width="33%">
+            <img src="img/app/1.png" alt="" width="31%">
+            <img src="img/app/2.png" alt="" width="31%">
+            <img src="img/app/23.png" alt="" width="31%">
           </div>
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
