--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -40,11 +40,8 @@
       font-size: 1em;
   } 
    
-.reveal p {
-	margin-bottom: 10px;
-	line-height: 1.2em;
-	font-size:.6em !important;
-	color:red;
+.ff {
+	font-size:.5em !important;
 }
 </style>
 
@@ -124,9 +121,9 @@
           <h2>ขั้นตอนการทำงาน (แอปพลิเคชัน)</h2>
        <br>
           <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-            <img src="img/app/1.png" alt="" width="31%">
-            <img src="img/app/2.png" alt="" width="31%">
-            <img src="img/app/23.png" alt="" width="31%">
+            <img src="img/app/1.png" alt="" width="30%">
+            <img src="img/app/2.png" alt="" width="30%">
+            <img src="img/app/23.png" alt="" width="30%">
           </div>
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
@@ -235,7 +232,7 @@
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
 
-          <p class="page">
+          <p class="page ff">
               ● ประเทศไทย  <br><br>
               ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้ <br><br>
               ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ <br><br>
