--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -128,7 +128,7 @@
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
              
-            <p class="page">
+            <p class="page ff">
                 1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก <br>  
                 2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น <br>
                 3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก  <br>
@@ -246,11 +246,9 @@
         </div>        
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
-          <p class="page">
-            <small><br>
+          <p class="page ff">
             ●  ต่างประเทศ<br><br>
             ○ Application ของ International Rice Research Institute (IRRI) ไม่มีการเชื่อมโยงข้อมูลน้ำฝนแบบเรียลไทม์เพื่อสนับสนุนการตัดสินใจด้านปฏิทินเพาะปลูก 
-            </small>
           </p>
         </div>
       </section>  
