--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -128,7 +128,7 @@
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
              
-            <p class="page ff">
+            <p class="page">
                 1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก <br>  
                 2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น <br>
                 3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก  <br>
@@ -225,14 +225,14 @@
    
         </section>
 
-      <section data-background-color="#cce6ff" >
+      <section data-background-color="#cce6ff" class="ff" >
         <h2>จุดเด่นของ Application</h2>
         <br>
         <br>
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
 
-          <p class="page ff">
+          <p class="page">
               ● ประเทศไทย  <br><br>
               ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้ <br><br>
               ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ <br><br>
@@ -246,7 +246,7 @@
         </div>        
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
-          <p class="page ff">
+          <p class="page">
             ●  ต่างประเทศ<br><br>
             ○ Application ของ International Rice Research Institute (IRRI) ไม่มีการเชื่อมโยงข้อมูลน้ำฝนแบบเรียลไทม์เพื่อสนับสนุนการตัดสินใจด้านปฏิทินเพาะปลูก 
           </p>
