--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -225,14 +225,14 @@
    
         </section>
 
-      <section data-background-color="#cce6ff" class="ff" >
+      <section data-background-color="#cce6ff">
         <h2>จุดเด่นของ Application</h2>
         <br>
         <br>
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
 
-          <p class="page">
+          <p class="ff">
               ● ประเทศไทย  <br><br>
               ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้ <br><br>
               ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ <br><br>
@@ -246,7 +246,7 @@
         </div>        
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
-          <p class="page">
+          <p class="ff">
             ●  ต่างประเทศ<br><br>
             ○ Application ของ International Rice Research Institute (IRRI) ไม่มีการเชื่อมโยงข้อมูลน้ำฝนแบบเรียลไทม์เพื่อสนับสนุนการตัดสินใจด้านปฏิทินเพาะปลูก 
           </p>
