--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -131,7 +131,7 @@
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
              
-            <p class="f06">
+            <p class="page">
                 1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก <br>  
                 2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น <br>
                 3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก  <br>
