--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -38,7 +38,8 @@
  <style>  
   .f07 {
       font-size: .75em !importan;
-  } 	 
+  } 
+	 
   .f06 {
       font-size: .65em !importan;
   } 
@@ -131,15 +132,15 @@
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
              
-            <p class="f06">
-                1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก </br>  
-                2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น </br>
-                3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก  </br>
-                4)  กดยืนยันเมื่อทำการปลูกพืชตามที่ระบุไว้จริง </br>
-                5)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต </br>
-                6)  เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก </br>
+            <div class="f06">
+                1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก <br><br>  
+                2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น <br><br>
+                3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก  <br><br>
+                4)  กดยืนยันเมื่อทำการปลูกพืชตามที่ระบุไว้จริง <br><br>
+                5)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต <br><br>
+                6)  เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก <br><br>
                 7)  บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)            
-            </p>
+            </div>
 
           </div>
           </section>
