--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -106,7 +106,8 @@
           <p class="page" >
           • ปริมาณฝนที่ตกนับเป็นปัจจัยสำคัญที่กำหนดฤดูกาลเพาะปลูกและผลผลิต <br><br>
           • ปัจจุบันมีการตรวจวัดข้อมูลน้ำฝนหลายหน่วยงานแต่ยังขาดการการบูรณาการข้อมูลจากหลายแหล่ง (Multi Sources) มาต่อยอดใช้ร่วมกันด้านการเกษตร <br><br>
-          • แอปพลิเคชันด้านการเกษตรส่วนใหญ่ยังไม่มีการใช้เทคโนโลยี GNSS และ LBS ร่วมกับข้อมูลปริมาณฝนเรียลไทม์ (Real Time) <br>สำหรับใช้เป็นเครื่องมือในการวางแผนปฎิทินเพาะปลูกและจัดการน้ำระดับแปลงของเกษตร </p>
+          • แอปพลิเคชันด้านการเกษตรส่วนใหญ่ยังไม่มีการใช้เทคโนโลยี GNSS และ LBS ร่วมกับข้อมูลปริมาณฝนเรียลไทม์ (Real Time) <br>สำหรับใช้เป็นเครื่องมือในการวางแผนปฎิทินเพาะปลูกและจัดการน้ำระดับแปลงของเกษตร 
+	</p>
         </div>
 
         <div class="col-xs-12 col-sm-4 col-lg-4 text-center">
@@ -131,14 +132,13 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
-           	<p class="page">              
+           	<p class="page" >             
                 1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก<br><br>
-                2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น<br><br>
-                3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก<br><br> 
-                4)  กดยืนยันเมื่อทำการปลูกพืชตามที่ระบุไว้จริง<br><br>
-                5)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br><br>
-                6)  เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก<br><br> 
-                7)  บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)<br><br>            
+                2)  เลือกชนิดพืชและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น <br><br>
+                3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก <br><br> 
+                4)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูกและเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br><br>
+                5)  เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆ ในช่วงเวลาเดียวกันเพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก <br><br> 
+                6)  บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ) <br><br>            
 		</p>
           </div>
           </section>
