--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -37,11 +37,11 @@
   
  <style>  
   .f07 {
-      font-size:.75em !importan;
+      font-size:.75em;
   } 
 	 
   .f06 {
-      font-size:.65em !importan;
+      font-size:.65em;
   } 
    
 .f05 {
