--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -132,7 +132,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
-           	<p class="f06" >             
+           	<p class="page" >             
                 1) เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก<br><br>
                 2) เลือกชนิดพืชและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูก<br><br>
 		4) ระบบประมวลผลข้อมูลความต้องการน้ำของพืช ความเหมาะสมของพื้นที่<br><br>
