--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -134,7 +134,7 @@
           <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
            	<p class="page" >             
                 1) เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก<br><br>
-                2) เลือกชนิดพืชและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูก</br>
+                2) เลือกชนิดพืชและระบุสัปดาห์ที่จะเริ่มเพาะปลูก</br>
 		4) ระบบประมวลผลข้อมูลความต้องการน้ำของพืช ความเหมาะสมของพื้นที่<br><br>
                 3) ระบบแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก <br><br> 
                 4) ระบบแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูกและเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br><br>
