--- a/slides/WatchRisk/index.html
+++ b/slides/WatchRisk/index.html
@@ -240,25 +240,25 @@
       </section>
 
       <section>
-        <h3><a href="http://www.cgistln.nu.ac.th/"><img src="http://www.cgistln.nu.ac.th/pararubber/resources/logo_gistv3.png" width="30%" alt=""></a><br> DEVELOPMENT TEAM</h3>
+        <h3><a href="http://www.cgistln.nu.ac.th/"><img src="http://www.cgistln.nu.ac.th/pararubber/resources/logo_gistv3.png" width="30%" alt=""></a><br>  TEAM</h3>
 
         <br>
 
         <div class="col-xs-4 col-sm-4 col-lg-3 text-center">
          <a ><img src= "img/team/1.jpg" width="100%"></a> 
-         <small>Teerayoot INJUN <br> DEVELOPER</small> 
+         <small>Teerayoot INJUN <br> </small> 
         </div>
         <div class="col-xs-4 col-sm-4 col-lg-3 text-center">
             <a ><img src= "img/team/2.jpg" width="100%"></a>
-          <small>Chingchai HOOMHONG<br> DEVELOPER</small> 
+          <small>Chingchai HOOMHONG<br> </small> 
         </div>
         <div class="col-xs-4 col-sm-4 col-lg-3 text-center">
           <a ><img src= "img/team/3.jpg" width="100%"></a>
-           <small>Sakda HOMHUAN<br> DEVELOPER</small> 
+           <small>Sakda HOMHUAN<br> </small> 
         </div>
         <div class="col-xs-4 col-sm-4 col-lg-3 text-center">
           <a><img src= "img/team/4.jpg" width="100%"></a>
-           <small>Chada NARONGRIT<br> DEVELOPER</small> 
+           <small>Chada NARONGRIT<br> </small> 
         </div>
 
 
