--- a/slides/WatchRisk/index.html
+++ b/slides/WatchRisk/index.html
@@ -235,7 +235,7 @@
         </div>
 
                 <div class="col-xs-12 col-sm-4 col-lg-4 text-center">
-                  <img src= "img/app/5.png" width="70%">
+                  <img src= "img/mobile4.png" width="100%">
         </div>
       </section>
 
