--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -120,90 +120,138 @@
         </section>
       </section>
 
-        <section data-background-color="#cce6ff"  data-background-transition="slide">
-          <section>
-          <h2>ขั้นตอนการทำงาน (แอปพลิเคชัน)</h2>
-       <br>
-          <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-            <!--img src="img/app/1.png" alt="" width="30%">
-            <img src="img/app/2.png" alt="" width="30%"-->
-            <img src="img/app/23.png" alt="" width="70%">
-          </div>
+     <section data-background-color="#cce6ff" data-background-transition="slide">
+                <section>
+                    <h2>การทำงานของแอปพลิเคชัน</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <!-- 
+                        <img src="img/app/1.png" alt="" width="30%">
+                        <img src="img/app/2.png" alt="" width="30%">
+                         -->
+                        <img src="img/app/23.png" alt="" width="70%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5">
+                                1) ค้นหาตำแหน่งตัวเอง ณ ปัจจุบัน<br><br>  
+                                2) เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก<br><br> 
+                                3) แสดงข้อมูลรายละเอียดของแปลงเพาะปลูก<br><br> 
+                                4) เพิ่มรายละเอียดข้อมูลที่เกี่ยวข้องกับแปลงที่ดินนั้น<br><br> 
+                                5) ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br><br> 
+                                6) เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก<br><br> 
+                                7) บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)
+                                <br>
+                            </font>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <h2>1. ค้นหาตำแหน่งตัวเอง ณ ปัจจุบัน</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <img src="img/app/17.png" alt="" width="30%">
+                        <img src="img/app/21.png" alt="" width="30%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5"></font>
+                            ○ ค้นหาตำแหน่งปัจจุบันจาก GPS ในมือถือ<br><br>  
+                            ○ ค้นหาตำแหน่งจากขอบเขตการปกครอง<br><br>  
+                            </font>
+                        </p>
+                    </div>                                
+                </section>
 
-          <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
-           	<p class="page"><font size="5">        
-                1)  เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก<br>
-                2)  เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น<br>
-                3)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก<br>
-                4)  กดยืนยันเมื่อทำการปลูกพืชตามที่ระบุไว้จริง<br>
-                5)  ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br>
-                6)  เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก<br>
-                7)  บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)<br>
-		        </font></p>
-          </div>
-          </section>
+                <section>
+                    <h2>2. เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <img src="img/app/12.png" alt="" width="30%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5"></font>
+                            ○ เพิ่มขอบเขตแปลงเพาะปลูกโดยการวาดลงบนหน้าจอ<br><br>  
+                            ○ ระบบจะวิเคราะห์ความเหมาะสมเพาะปลูกพืชของแปลงดังกล่าว
+                            </font>
+                        </p>
+                    </div>
+                </section>
 
-          <section>
-              <h2>- ค้นหาตำแหน่งตัวเอง ณ ปัจจุบัน</h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/17.png" alt="" width="30%">
-                </div>
-          </section>
+                <section>
+                    <h2>3. แสดงข้อมูลรายละเอียดของแปลงเพาะปลูก</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <img src="img/app/11.png" alt="" width="30%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5"></font>
+                            ○ แอพแสดงข้อมูลความเหมาะสมของดิน น้ำ ระยะห่างจากระบบสาธารณูปโภค และสภาพทางกายภาพของแปลงที่เพิ่มเข้ามาอัตโนมัติ<br><br>  
+                            </font>
+                        </p>
+                    </div>
+                </section>
 
-          <section>
-              <h2>- เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก</h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/12.png" alt="" width="30%">
-                </div>
-          </section>
+                <section>
+                    <h2>4. เพิ่มรายละเอียดข้อมูลที่เกี่ยวข้องกับแปลงที่ดินนั้น</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <img src="img/app/15.png" alt="" width="25%">
+                        <img src="img/app/18.png" alt="" width="25%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5"></font>
+                            ○ เลือกชนิดพืชที่จะเพาะปลูกและระบุสัปดาห์ที่คาดว่าจะเริ่มเพาะปลูกพืชชนิดนั้น<br><br>   
+                            ○ ระบบจะวิเคราะห์ความความต้องการน้ำของพืชตลอดอายุการเพาะปลูก
+                            </font>
+                        </p>
+                    </div>
+                </section>
 
-          <section>
-              <h2>- เพิ่มรายละเอียดข้อมูลที่เกี่ยวข้อง<br>กับแปลงที่ดินนั้น</h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/15.png" alt="" width="25%">
-                  <img src="img/app/18.png" alt="" width="25%">
-                </div>
-          </section>
-
-          <section>
-              <h2>- สืบค้นข้อมูล</h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/21.png" alt="" width="30%">
-                  <img src="img/app/11.png" alt="" width="30%">
-                </div>
-          </section>
-
-          <section>
-              <h2>- เรียกดูปริมาณน้ำฝนสะสมเรียลไทม์</h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/7.png" alt="" width="30%">
-                  <img src="img/app/2.png" alt="" width="30%">
-                </div>
-          </section>
-
-         <!--  <section>
+                <section>
+                    <h2>5. แสดงผลการวิเคราะห์และแจ้งเตือน</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <img src="img/app/7.png" alt="" width="30%">
+                        <img src="img/app/2.png" alt="" width="30%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5"></font> 
+                            ○ ระบบจะแสดงกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก<br><br> 
+                            ○ ระบบจะแจ้งเตือนอัตโนมัติเมื่อฝนตกมาเพียงพอให้เริ่มฤดูกาลเพาะปลูก<br><br> 
+                            ○ ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br><br> 
+                            </font>
+                        </p>
+                    </div>
+                </section>
+                <!--  <section>
               <h2>- ระบบจะแจ้งเตือนอัตโนมัติ </h2>
              <br>
                 <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
                   <img src="img/app/17.png" alt="" width="30%">
                 </div>
           </section> -->
+                <section>
+                    <h2>6. แบบประเมินตนเอง <br>สำหรับการผลิตแบบเกษตร GMP</h2>
+                    <br>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
+                        <img src="img/app/15.png" alt="" width="25%">
+                        <img src="img/app/3.png" alt="" width="25%">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
+                        <p class="page">
+                            <font size="5"></font>
+                            ○ แบบประเมินตนเองสำหรับเตรียมตัวขอใบรับรองตามหลักเกณฑ์วิธีการที่ดีในการผลิตอาหาร (Good Manufacturing Practice : GMP) <br><br>  
+                            </font>
+                        </p>
+                    </div>
+                </section>
 
-          <section>
-              <h2>- แบบประเมินตนเอง <br>สำหรับการผลิตแบบเกษตร GMP</h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/15.png" alt="" width="25%">
-                  <img src="img/app/3.png" alt="" width="25%">
-                </div>
-          </section>
-          
-        </section>
+            </section>
 
         <section data-background-color="#cce6ff"  data-background-transition="slide">
          
