--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -33,24 +33,9 @@
         <![endif]-->
         <link href="https://fonts.googleapis.com/css?family=Kanit:200,400" rel="stylesheet">
 
-</head>
-  
- <style>  
-  .f07 {
-      font-size:.75em !importan;
-  } 
-	 
-  .f06 {
-      font-size:.65em !importan;
-  } 
-   
-.f05 {
-	font-size:.57em !important;
-}
-</style>
+</head> 
 
 <body >
-
   <div class="reveal" >
     <div class="slides" >
 
@@ -138,10 +123,8 @@
                                 2) เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก<br><br> 
                                 3) แสดงข้อมูลรายละเอียดของแปลงเพาะปลูก<br><br> 
                                 4) เพิ่มรายละเอียดข้อมูลที่เกี่ยวข้องกับแปลงที่ดินนั้น<br><br> 
-                                5) ระบบจะแจ้งเตือนอัตโนมัติเมื่อเมื่อสมดุลน้ำมีไม่เพียงพอในระหว่างที่เพาะปลูก และเมื่อถึงระยะเก็บเกี่ยวผลผลิต<br><br> 
-                                6) เรียกดูกราฟปริมาณน้ำฝนสะสมเรียลไทม์เทียบกับปีอื่นๆในช่วงเวลาเดียวกัน เพื่อประเมินสถานการณ์ความเสี่ยงภัยแล้งของแปลงเพาะปลูก<br><br> 
-                                7) บันทึกข้อมูลอื่นๆที่เกี่ยวข้องกับแปลงที่ดินนั้น(ถ้าต้องการ)
-                                <br>
+                                5) แสดงผลการวิเคราะห์และแจ้งเตือน<br><br> 
+                                6) แบบประเมินตนเองสำหรับการเกษตร GMP<br><br> 
                             </font>
                         </p>
                     </div>
