--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -124,6 +124,7 @@
                                 4) เพิ่มรายละเอียดข้อมูลที่เกี่ยวข้องกับแปลงที่ดินนั้น<br><br> 
                                 5) แสดงผลการวิเคราะห์และแจ้งเตือน<br><br> 
                                 6) แบบประเมินตนเองสำหรับการเกษตร GMP<br><br> 
+                                <br>
                         </p>
                     </div>
                 </section>
@@ -131,8 +132,8 @@
                     <h2>1. ค้นหาตำแหน่งตัวเอง ณ ปัจจุบัน</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-                        <img src="img/app/17.png" alt="" width="30%">
-                        <img src="img/app/21.png" alt="" width="30%">
+                        <img src="img/app/17.png" alt="" width="50%">
+                        <img src="img/app/21.png" alt="" width="50%">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
@@ -148,7 +149,7 @@
                     <h2>2. เพิ่มพิกัดหรือวาดขอบเขตแปลงเพาะปลูก</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-                        <img src="img/app/12.png" alt="" width="30%">
+                        <img src="img/app/12.png" alt="" width="100%">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
@@ -164,7 +165,7 @@
                     <h2>3. แสดงข้อมูลรายละเอียดของแปลงเพาะปลูก</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-                        <img src="img/app/11.png" alt="" width="30%">
+                        <img src="img/app/11.png" alt="" width="100%">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
@@ -179,8 +180,8 @@
                     <h2>4. เพิ่มรายละเอียดข้อมูลที่เกี่ยวข้องกับแปลงที่ดินนั้น</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-                        <img src="img/app/15.png" alt="" width="25%">
-                        <img src="img/app/18.png" alt="" width="25%">
+                        <img src="img/app/15.png" alt="" width="50%">
+                        <img src="img/app/18.png" alt="" width="50%">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
@@ -196,8 +197,8 @@
                     <h2>5. แสดงผลการวิเคราะห์และแจ้งเตือน</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-                        <img src="img/app/7.png" alt="" width="30%">
-                        <img src="img/app/2.png" alt="" width="30%">
+                        <img src="img/app/7.png" alt="" width="50%">
+                        <img src="img/app/2.png" alt="" width="50%">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
@@ -209,19 +210,12 @@
                         </p>
                     </div>
                 </section>
-                <!--  <section>
-              <h2>- ระบบจะแจ้งเตือนอัตโนมัติ </h2>
-             <br>
-                <div class="col-xs-12 col-sm-12 col-lg-12 text-center">
-                  <img src="img/app/17.png" alt="" width="30%">
-                </div>
-          </section> -->
                 <section>
-                    <h2>6. แบบประเมินตนเอง <br>สำหรับการผลิตแบบเกษตร GMP</h2>
+                    <h2>6. แบบประเมินตนเองสำหรับการเกษตร GMP</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
-                        <img src="img/app/15.png" alt="" width="25%">
-                        <img src="img/app/3.png" alt="" width="25%">
+                        <img src="img/app/15.png" alt="" width="50%">
+                        <img src="img/app/3.png" alt="" width="50%">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
