--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -170,8 +170,7 @@
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-left">
                         <p class="page">
                         <p></p><p></p>
-                            ○ แอพแสดงข้อมูลความเหมาะสมของดิน น้ำ ระยะห่างจากระบบสาธารณูปโภค และสภาพทางกายภาพของแปลงที่เพิ่มเข้ามาอัตโนมัติ<br><br>  
-                            </font>
+                            ○ แอพแสดงข้อมูลความเหมาะสมของดิน น้ำ ระยะห่างจากระบบสาธารณูปโภค ภัยธรรมชาติ และสภาพทางกายภาพของแปลงที่เพิ่มเข้ามาอัตโนมัติ<br><br>                      
                         </p>
                     </div>
                 </section>
