--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -162,7 +162,7 @@
                 </section>
 
                 <section>
-                    <h2>3. แสดงข้อมูลรายละเอียดของแปลงเพาะปลูก</h2>
+                    <h2>3. แสดงรายละเอียดของแปลงเพาะปลูก</h2>
                     <br>
                     <div class="col-xs-12 col-sm-6 col-lg-6 text-center">
                         <img src="img/app/11.png" alt="" width="60%">
