--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -257,11 +257,16 @@
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
 
           <p class="f05">
-              ● ประเทศไทย  <br><br>
-              ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้ <br><br>
-              ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ <br><br>
-              ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br><br>
-              ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br>           
+            <font size="6">
+                ● ประเทศไทย<br><br> 
+              </font> 
+              <font size="5">
+                ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้<br><br>
+                ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่<br><br>
+                ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br><br>
+                ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br><br> 
+                <br>
+              </font>           
           </p>
         </div>
         
@@ -270,10 +275,12 @@
         </div>        
 
         <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
-          <p class="f05">
+          <font size="6">
             ●  ต่างประเทศ<br><br>
+          </font> 
+          <font size="5">
             ○ Application ของ International Rice Research Institute (IRRI) ไม่มีการเชื่อมโยงข้อมูลน้ำฝนแบบเรียลไทม์เพื่อสนับสนุนการตัดสินใจด้านปฏิทินเพาะปลูก 
-          </p>
+           </font> 
         </div>
       </section>  
 
