--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -256,10 +256,10 @@
                 <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
                     <font size="4">
                         ● ประเทศไทย<br><br> 
-                        ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้<br><br>
-                        ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่<br><br>
-                        ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br><br>
-                        ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br><br> 
+                        ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้<br>
+                        ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่<br>
+                        ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br>
+                        ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br>
                         <br>
                     </font>
                 </div>
