--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -101,7 +101,7 @@
        </section>
         <section>
           <h2>สถาปัตยกรรมของระบบ</h2>
-          <img src="img/2516.jpg" />
+          <img src="img/flow-fmp.jpg" />
         </section>
       </section>
 
