--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -89,9 +89,9 @@
 
         <div class="col-xs-12 col-sm-8 col-lg-8 text-left">
           <p class="page" >
-          • ปริมาณฝนที่ตกนับเป็นปัจจัยสำคัญที่กำหนดฤดูกาลเพาะปลูกและผลผลิต <br><br>
+          • ข้อมูลน้ำฝนเป็นปัจจัยสำคัญที่กำหนดฤดูกาลเพาะปลูกและผลผลิต <br><br>
           • ปัจจุบันมีการตรวจวัดข้อมูลน้ำฝนหลายหน่วยงานแต่ยังขาดการการบูรณาการข้อมูลจากหลายแหล่ง (Multi Sources) มาต่อยอดใช้ร่วมกันด้านการเกษตร <br><br>
-          • แอปพลิเคชันด้านการเกษตรส่วนใหญ่ยังไม่มีการใช้เทคโนโลยี GNSS และ LBS ร่วมกับข้อมูลปริมาณฝนเรียลไทม์ (Real Time) <br>สำหรับใช้เป็นเครื่องมือในการวางแผนปฎิทินเพาะปลูกและจัดการน้ำระดับแปลงของเกษตร </p>
+          • แอปพลิเคชันด้านการเกษตรส่วนใหญ่ยังไม่มีการใช้เทคโนโลยี GNSS และ LBS ร่วมกับข้อมูลปริมาณฝนเรียลไทม์ (Real Time) สำหรับใช้เป็นเครื่องมือในการวางแผนปฎิทินเพาะปลูกและจัดการน้ำระดับแปลงของเกษตร </p>
         </div>
 
         <div class="col-xs-12 col-sm-4 col-lg-4 text-center">
