--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -249,29 +249,29 @@
    
         </section>
 
-      <section data-background-color="#cce6ff">
+       <section data-background-color="#cce6ff">
                 <h2>จุดเด่นของ Application</h2>
                 <br>
                 <br>
                 <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
-                    <font size="4">
+                    <small>
                         ● ประเทศไทย<br><br> 
-                        ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้<br>
-                        ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่<br>
-                        ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br>
+                        ○ ยังไม่มีการพัฒนาแอปพลิเคชันลักษณะนี้<br><br> 
+                        ○ ยังไม่มีการพัฒนาระบบเว็บประมวลผลที่ดึงข้อมูลน้ำฝนจากหลายแหล่งมาประมวลร่วมกัน และเชื่อมโยงข้อมูลไปยังแอปพลิเคชันบนอุปกรณ์เคลื่อนที่<br><br> 
+                        ○ ยังไม่มีแอปพลิเคชันที่สามารถดึงข้อมูลกริดที่ได้จากการวิเคราะห์ข้อมูลน้ำฝนมาคำนวณและแสดงผลร่วมกันในลักษณะสมดุลน้ำระดับรายแปลง<br><br> 
                         ○ ยังไม่มีแอปพลิเคชันการแจ้งเตือนวันที่เหมาะสมในการเริ่มต้นปฏิทินเพาะปลูกและความเสี่ยงขาดแคลนน้ำเพื่อการเพาะปลูกระดับแปลงแบบเรียลไทม์<br>
                         <br>
-                    </font>
+                    </small>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-lg-4 text-center ">
                     <img src="img/mobile3.png" width="85%">
                 </div>
                 <div class="col-xs-4 col-sm-4 col-lg-4 text-left">
-                    <font size="4">
+                   <small>
                         ● ต่างประเทศ
                         <br>
                         <br> ○ Application ของ International Rice Research Institute (IRRI) ไม่มีการเชื่อมโยงข้อมูลน้ำฝนแบบเรียลไทม์เพื่อสนับสนุนการตัดสินใจด้านปฏิทินเพาะปลูก                    
-                    </font>
+                    </small>
                 </div>
             </section> 
 
