--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -105,7 +105,7 @@
         </section>
       </section>
 
-     <section data-background-color="#cce6ff" data-background-transition="slide">
+     <section data-background-color="#cce6ff" data-background-transition="convex">
                 <section>
                     <h2>การทำงานของแอปพลิเคชัน</h2>
                     <br>
