--- a/slides/farmplan/index.html
+++ b/slides/farmplan/index.html
@@ -105,7 +105,7 @@
         </section>
       </section>
 
-     <section data-background-color="#cce6ff" data-background-transition="convex">
+     <section data-background-color="#cce6ff" data-transition="convex">
                 <section>
                     <h2>การทำงานของแอปพลิเคชัน</h2>
                     <br>
@@ -227,7 +227,7 @@
 
             </section>
 
-        <section data-background-color="#cce6ff"  data-background-transition="slide">
+        <section data-background-color="#cce6ff"  data-transition="convex">
          
                 <h2>ขั้นตอนการทำงาน (เว็บ)</h2>
              <br>
@@ -249,7 +249,7 @@
    
         </section>
 
-       <section data-background-color="#cce6ff">
+       <section data-background-color="#cce6ff" data-transition="convex">
                 <h2>จุดเด่นของ Application</h2>
                 <br>
                 <br>
@@ -275,7 +275,7 @@
                 </div>
             </section> 
 
-      <section data-background-color="#cce6ff" >
+      <section data-background-color="#cce6ff" data-transition="convex">
         <h2>ประโยชน์</h2>
         <br>
         <br>
