--- a/slides/WatchRisk/index.html
+++ b/slides/WatchRisk/index.html
@@ -7,7 +7,7 @@
   <title>Watch Risk</title>
   <meta content="Wath Risk Application" name=
   "description">
-  <meta content="Teerayoot INJUN" name="author">
+  <meta content="gistnu" name="author">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="black-translucent" name=
   "apple-mobile-web-app-status-bar-style">
@@ -77,7 +77,7 @@
 
 
         <div class="col-xs-12 col-sm-8 col-lg-8 text-left">
-          <p class="page" ><font size="">แนวคิด  <br>
+          <p class="page" ><font size=""> <br>
 • ประเทศไทยพบโรคติดต่อที่เกิดจากยุงทุกปี เช่น ไข้เลือดออก มาลาเรีย และเท้าช้าง  <br>
 • การท่องเที่ยวแบบไม่ระมัดระวังอาจเกิดการติดต่อและแพร่กระจายโรค <br>
 • ยังไม่มีแอพฯ บอกสถานการณ์โรคติดต่อจากยุงสำหรับนักท่องเที่ยว <br>
